samples/_failures_safe/1761299699_cf8f2a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f595211.c: In function ‘main’:
./samples/SAFE/__tmp_0f595211.c:149:12: error: missing terminating " character
  149 |     printf("Enter start and end nodes
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0f595211.c:149:5: error: expected expression at end of input
  149 |     printf("Enter start and end nodes
      |     ^~~~~~
./samples/SAFE/__tmp_0f595211.c:149:5: error: expected declaration or statement at end of input
